# GLFW_CATRenderer

./: CMakeLists.txt  GLFW_CATRenderer.sln  GLFW_CATRenderer.vcxproj  GLFW_CATRenderer.vcxproj.filters  README.md  testF.glsl  texturedF.glsl  texturedV.glsl
lib/cglm-0.9.4/lib/: libcglm.so.0.9.4
src/: cat_renderer.h  core.c  dependencies.h  main.c  window.c
src/renderer/: gl_shader.c  r_gl.c  r_gl.h  renderer.c  renderer.h
src/renderers/: gl_shader.c
src/utils/: asset_loader.c  cat_time.c  linear_alg.c  linear_alg.h
